// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.graphql 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# @prettier

query Browse($offset:Int){browse(offset:$offset)}

=====================================output=====================================
# @prettier

query Browse($offset: Int) {
  browse(offset: $offset)
}

================================================================================
`;

exports[`without-pragma.graphql 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["graphql"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
query Browse($offset:Int){browse(offset:$offset)}

=====================================output=====================================
# @format

query Browse($offset: Int) {
  browse(offset: $offset)
}

================================================================================
`;
